Fix row gap and block height based on Basecamp student suggestions

--- a/screen.css
+++ b/screen.css
@@ -67,7 +67,7 @@ container{
   padding-top: 2em;
   border-top: .1em solid rgba(175,175,175);
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
   grid-template-areas:
     "Nina Choobie Pooch"
     "Tilly Boys Nugget"
@@ -79,7 +79,8 @@ container{
 
 .block{
   text-align: center;
-  background: rgba(25,25,45)
+  background: rgba(25,25,45);
+  height: min-content;
 
 }
 
@@ -101,14 +102,14 @@ figcaption{
 }
 
 #Outro{
-  padding-top: 1em;
-  padding bottom: 2em;
+  padding-top: 0em;
+  padding-bottom: 2em;
 }
 
 @media screen and (max-width:1000px){
 .content{
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: auto;
   grid-template-areas:
     "Nina Choobie"
     "Pooch Tilly"
@@ -134,7 +135,7 @@ p {
 @media screen and (max-width:540px){
 .content{
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(12, 1fr);
+  grid-template-rows: auto;
   grid-template-areas:
     "Nina"
     "Choobie"
